Revision history for perl distribution Convos

5.08 Not Released
 - Fix reading notificatins with unicode
 - Fix issue with some pastebin links
 - Add link to raw version of the paste

5.07 2020-12-29T13:32:00+0900
 - Add support for EXTERNAL and PLAIN SASL authentication #356 #525
 - Add supoort for nickserv certfp authentication #380

5.06 2020-11-30T11:25:00+0900
 - Add a "compact display" mode as Viewport option #535
   Contributor: Abhijit Menon-Sen
 - Add tighter integration with Jitsi video chat #536
 - Fix leading uppercase characters in usernames #538
   Contributor: Abhijit Menon-Sen
 - Removed EXPERIMENTAL video support added in 4.08 #204

5.05 2020-11-25T11:52:00+0900
 - Add support for for ":-*", ":O" and "(Y)" #534
   Contributor: Megaf
 - Add better rendering of Jitsi links
 - Fix not adding new private messages, unless historyStopAt
 - Fix resetting historyStopAt and historyStartAt when jumping back in history

5.04 2020-11-24T21:42:00+0900
 - Fix pasting text into the chat input
 - Fix updating search field value

5.03 2020-11-24T21:24:00+0900
 - Fix not jumping back in the chat input when pressing shift

5.02 2020-11-24T18:53:00+0900
 - Add user input to localStorage, so it survives refresh
 - Fix injecting upload link to user input field
 - Fix not dropping key pressees

5.01 2020-11-23T14:23:00+0900
 - Add support for negotiating IRCv3 capabilities #444
 - Add chat input text is coupled to conversation #524
   Contributor: Thibault Duponchelle
 - Add support for hiding join/part messages #527
   Contributor: Thibault Duponchelle
 - Change WHOIS reply to show more information #528
   Contributor: Abhijit Menon-Sen
 - Add "realname" as a new connection parameter #529
   Contributor: Abhijit Menon-Sen
 - Add WHOIS will be run on new private messages
 - Changed service accounts "chanserv" and "nickserv" will show up in connection conversation #379 #532
 - Change clicking on a nick will create a new conversation #530